--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 
 <body>
 <div id="headerWrapper">
-	<header>
+	<header id="top">
         <img src="images/logo1x.png" alt="logo">
 		<span>Design Thinking</span>
+        <a href="#navLinks">&#9776;</a>
 	</header>
 </div><!-- end header wrapper -->
 
     
     
 <div id="navWrapper">
-    <nav>
+    <nav id="navlinks">
+        <a href="#top">&#10005</a>
         <ul>
             <li><a href="#">Clients</a></li>
             <li><a href="#">Services</a></li>
