--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
         <label><input type="radio" name="communication" value="send text">Send Text</label>
         <label><input type="radio" name="communication" value="send email">Send Email</label>
         <label><input type="radio" name="communication" value="send mail">Send Mail</label>
-
+<h3>UserName</h3>
         <label>UserName (6 or more)<input type="text" required minlength="6" title="Please enter a UserName that is at least 6 characters long"></label>
+<h3>Password</h3>
+        <label> Password (5-9 letters or numbers) <input type="password" name="password" required pattern="[A-Za-z0-9]{5,9}" title="5-9 letters or numbers Please"></label>
 
-        <label> Password (5-9 letters or numbers) <input type="password" name="password" required pattern="[A-Za-z0-9]{5,9}"></label>
-
-        <input type="submit" value="register">
+        <input type="submit" value="Register">
         </form>
     </main>
 </div><!-- end main wrapper -->
