--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="css/styles.min.css">
 
 <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -18,7 +18,7 @@
 <div id="headerWrapper">
 	<header id="top">
         <img src="images/logo1x.png" alt="logo">
-		<span>Design Thinking</span>
+		<span>Wonder University</span>
         <a href="#navLinks">&#9776;</a>
 	</header>
 </div><!-- end header wrapper -->
@@ -29,11 +29,11 @@
     <nav id="navlinks">
         <a href="#top">&#10005</a>
         <ul>
-            <li><a href="#">Clients</a></li>
+            <li><a href="#">Advisors</a></li>
             <li><a href="#">Services</a></li>
-            <li class="active"><a href="#">Best Practices</a></li>
-            <li><a href="#">Our Team</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active"><a href="#">Apply</a></li>
+            <li><a href="#">Students</a></li>
+            <li><a href="#">Tuition</a></li>
         </ul>
     </nav>
 </div> <!-- end nav wrapper -->
