--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 <div id="navWrapper">
     <nav id="navlinks">
-        <a href="#top">&#10005</a>
+        <a href="#top">&#10005;</a>
         <ul>
             <li><a href="#">Advisors</a></li>
             <li><a href="#">Services</a></li>
@@ -82,7 +82,7 @@
 
 
         <h3>High School Graduation Date</h3>
-        <input type="date" value="2022-03-01" />
+        <input type="date" value="2022-03-01">
 
         <h3>Communication Preferences</h3>
         <label><input type="radio" name="communication" value="send text">Send Text</label>
